[gd_scene load_steps=3 format=3 uid="uid://dqc88huxru2ur"]

[ext_resource type="Script" uid="uid://bjngx6klh27pd" path="res://scripts/level_countdown_screen.gd" id="1_q2o7i"]
[ext_resource type="FontFile" uid="uid://dn3432akbml6w" path="res://assets/fonts/OxygenMono-Regular.ttf" id="2_3lk12"]

[node name="LevelCountdownScreen" type="CanvasLayer"]
script = ExtResource("1_q2o7i")

[node name="CountdownLabel" type="RichTextLabel" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("2_3lk12")
theme_override_font_sizes/normal_font_size = 141
bbcode_enabled = true
text = "[center]3[/center]"
fit_content = true
autowrap_mode = 0

[node name="LevelCountdownTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="LevelCountdownTimer" to="." method="_on_level_countdown_timer_timeout"]
